syntax = "proto3";

option csharp_namespace = "Server.Ggpc.Liker";

package Like;

// The greeting service definition.
service Liker {
  // Sends a greeting
  rpc GetLikes (PostIdRequest) returns (TotalLikesReply);
  rpc AddLike (PostIdRequest) returns(Empty);
}

// The request message containing the user's name.
message PostIdRequest {
  int32 post_id = 1;
}

// The response message containing the greetings.
message TotalLikesReply {
	int32 total_count = 1;
}

message Empty{};